# Blood

./: .replit  README.md  dev.sh  package-lock.json  package.json  pyproject.toml  replit.md  run_dev.py  start.sh  test_app.py
attached_assets/: Pasted--add-near-the-top-imports-import-io-re-import-pdfplumber-import-fitz-PyMuPDF-from-P-1757191106708_1757191106708.txt  Pasted-Make-the-project-run-in-Replit-without-interactive-tools-no-fuser-netstat-Do-exactly-1-Kill--1757164973473_1757164973474.txt  Pasted-Open-backend-app-main-py-and-replace-your-PDF-image-extraction-helpers-with-this-block-leave-the-re-1757191687773_1757191687774.txt  Pasted-Open-backend-app-main-py-and-update-allow-octet-stream-and-detect-pdf-by-header-ALLOWED-CT--1757192350759_1757192350759.txt  Pasted-Open-backend-app-main-py-module-app-main-app-After-the-existing-app-setup-add-the-following-code-1757187637686_1757187637687.txt  Pasted-Step-5C-A-API-helper-Results-Store-1-Create-frontend-src-lib-api-ts--1757139837134_1757139837134.txt  Pasted-Step-5C-Frontend-wire-up-to-explain-1-Add-a-tiny-API-helper-Create-frontend-src-lib-api-t-1757139291176_1757139291176.txt  Pasted-Step-6A-i18n-setup-language-switch-1-Create-overwrite-frontend-src-i18n-ts--1757149578108_1757149578109.txt  Pasted-Step-6B5-Update-AnalyteTable-tsx-for-i18n-import-React-useState-from-react-import-us-1757150908206_1757150908207.txt  Pasted-Step-7A-Add-ReportLab-PDF-helper-1-Append-to-backend-requirements-txt-reportlab-2-Crea-1757153042858_1757153042859.txt
backend/: requirements.txt
frontend/: index.html  package-lock.json  (+3 more)
(+55 files in other folders)
